--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -104,3 +104,29 @@ a {
     color-scheme: dark;
   }
 }
+
+@font-face {
+  font-family: 'CalifornianFB';
+  src: url('/font/CALIFB.TTF') format('truetype');
+}
+
+@font-face {
+  font-family: 'CalifornianFB';
+  src: url('/font/CALIFR.TTF') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'CalifornianFB';
+  src: url('/font/CALIFB.TTF') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'CalifornianFB';
+  src: url('/font/CALIFB.TTF') format('truetype');
+  font-weight: normal;
+  font-style: italic;
+}
