--- a/src/components/banner.module.css
+++ b/src/components/banner.module.css
@@ -13,15 +13,16 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin-top: 20px;
     font-size: 8px;
-    padding: 2px 10px;
+    padding: 3px 15px;
     border-color: #F4D28F ;
     border-radius: 3px;
-    border-width: 1px;
+    border-width: 1.5px;
 }
 
 .bannerButton:hover {
     background-color: #F4D28F;
-    color: white;
+    border-radius: 6px;
+    color: whitesmoke;
 }
 
 @media screen and (min-width: 768px) {
@@ -29,7 +30,7 @@
     .bannerButton {
         font-size: 12px;
         border-width: 1.5px;
-        padding: 3px 15px; /* Increase padding for large screens */
+        padding: 4px 20px; /* Increase padding for large screens */
     }
 }
 
@@ -38,6 +39,6 @@
     .bannerButton {
         font-size: 16px;
         border-width: 2px;
-        padding: 4px 20px; /* Increase padding for extra-large screens */
+        padding: 5px 25px; /* Increase padding for extra-large screens */
     }
 }
